# destruction_scenarios-release

./: README.md  debian.store  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
destruction_scenarios/: CMakeLists.txt  package.xml
destruction_scenarios/launch/: garage_hard.launch  garage_intermediate.launch
destruction_scenarios/worlds/: house_easy.world  house_intermediate.world
launch/: garage_easy.launch  house_easy.launch  house_hard.launch  house_intermediate.launch
rpm/: template.spec
worlds/: garage_easy.world  garage_hard.world  garage_intermediate.world  house_hard.world
